<resources>
    <string name="app_name">udl-pa-mobile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_deals">Deals</string>
    <string name="title_docs">Documents</string>
    <string name="prompt_phone">Phone</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="hint_phone" translatable="false">+7 (999) 999–99–99</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="promotions">Promotions</string>
    <string name="faqs">FAQ</string>
    <string name="contacts">Contacts</string>
    <string name="affiliate_program">Affiliate program</string>
    <string name="go_to_pay">Go to pay</string>
</resources>