<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aiwprton.udl_pa_mobile.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_deals"
        android:name="com.aiwprton.udl_pa_mobile.ui.deals.DealsFragment"
        android:label="@string/title_deals"
        tools:layout="@layout/fragment_deals" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aiwprton.udl_pa_mobile.ui.notifications.NotificationsFragment"
        android:label="@string/title_docs"
        tools:layout="@layout/fragment_notifications" />
</navigation>