<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16pt"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/settings"
            android:backgroundTint="@color/custom_blue" />

        <TextView
            android:text=">"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            tools:ignore="ExtraText"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/promotions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/promotions"
            android:backgroundTint="@color/custom_blue" />

        <TextView
            android:text=">"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/faqs"
            android:backgroundTint="@color/custom_blue" />

        <TextView
            android:text=">"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:columnCount="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/contacts"
            android:backgroundTint="@color/custom_blue" />

        <TextView
            android:text=">"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/affiliate_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/affiliate_program"
            android:backgroundTint="@color/custom_blue" />

        <TextView
            android:text=">"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText"/>
    </GridLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:text="@string/logout"
        android:backgroundTint="@color/custom_blue" />

</LinearLayout>